[package]
name = "field-effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "field-effect"
path = "main.rs"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
